# I-RIKF-LIO

./: .clang-format  CMakeLists.txt  README.md
config/: avia.yaml  hilti.yaml  nclt.yaml  ouster.yaml
include/ceres/: loop_clousure_factor.h  pose_graph_3d_error_term.h
include/ieskf_slam/: globaldefine.h
include/ieskf_slam/math/: SO3.h  geometry.h  math.h
include/ieskf_slam/modules/: module_base.h
include/ieskf_slam/modules/backend/: backend.h  posegraph.h
include/ieskf_slam/modules/frontbackPropagate/: frontbackPropagate.h
include/ieskf_slam/modules/frontend/: frontend.h  lio_zh_model.h
include/ieskf_slam/modules/ieskf/: ieskf.h
include/ieskf_slam/modules/invkf/: invkf.h
include/ieskf_slam/modules/map/: rect_map_manager.h
include/ieskf_slam/modules/propagater/: propagater.h
include/ieskf_slam/tools/: pangolin_visualizer.h  timer.h
include/ieskf_slam/type/: base_type.h  imu.h  measure_group.h  point.h  pointcloud.h  pose.h  timestamp.h  voxel.h
include/wrapper/ros_noetic/: ieskf_backend_noetic_wrapper.h  ieskf_frontend_noetic_wrapper.h  lidar_processer.h
include/wrapper/ros_noetic/lidar_process/: avia_process.h  common_lidar_process_interface.h  velodyne_process.h
launch/: backend.launch  hilti.launch  nclt.launch  ouster.launch
lib/STD/: STDesc.cpp  STDesc.h
lib/ikd_Tree/: ikd_Tree.cpp  ikd_Tree.h
lib/scan_context/: KDTreeVectorOfVectorsAdaptor.h  Scancontext.cpp  Scancontext.h  nanoflann.hpp  tictoc.h
rviz/: show.rviz
src/: mapping.cpp
src/app/ros_noetic/: ieskf_noetic_running_node.cpp
src/ieskf_slam/modules/backend/: backend.cpp  posegraph.cpp
src/ieskf_slam/modules/frontbackPropagate/: frontback_propagate.cpp
src/ieskf_slam/modules/frontend/: frontend.cpp
src/ieskf_slam/modules/ieskf/: ieskf.cpp
src/ieskf_slam/modules/invkf/: invkf.cpp
src/ieskf_slam/modules/map/: rect_map_manager.cpp
src/ieskf_slam/modules/propagater/: propagater.cpp
src/tools/: pandar_to_velodyne.cpp  pangolin_visualizer.cpp
src/wrapper/ros_noetic/: ieskf_backend_noetic_wrapper.cpp  ieskf_frontend_noetic_wrapper.cpp
